--- a/moduli 1/index.html
+++ b/moduli 1/index.html
@@ -1,6 +1,27 @@
 <html>
-    test
 
-    <p>test</p>
+     <head>
+        <title>Moduli 2</title>
+     </head>
+     <body>
+
+        <h1>This is heading 1</h1>
+        <h2>This is heading 2</h2>
+        <h3>This is heading 3</h3>
+        <h4>This is heading 4</h4>
+        <h5>This is heading 5</h5>
+        <h6>This is heading 6</h6>
+
+        <p> <strong> Build and shift software on a singe,</strong> collaborative platform
+            <br> Build and shift software on a singe, collaborative platform
+            Build <i>and shift software on a singe,</i>  collaborative platform
+           <mark> Build and shift software on a singe,</mark> collaborative platform
+           <del>Build and shift software on a singe, collaborative platform</del> Build and shift software on a singe, collaborative pla
+        </p>
+
+
+        <hr>
+     </body>
+
 
 </html>
