--- a/moduli 9/index.html
+++ b/moduli 9/index.html
@@ -2,6 +2,10 @@
     <head>
         <title>Moduli 9 </title>
         <meta name="viewport" content="width=device-width" initial-scale="1.0">
+        <meta name ="description" content="html and css for begineers">
+        <meta name="author" content="Deon">
+        <meta name ="keywords" content="HTML,CSS,JAVASCRIPT">
+        <meta name="Robots" content="index, archive"
     </head>
     <body>
         <picture>
@@ -18,6 +22,8 @@
         necessitatibus ratione. Eveniet corrupti
         officiis doloremque inventore distinctio 
         temporibus eligendi? Sit error ea quia?</p>
+
+        <p>0.80 &euro; is 1.00 &dollar;</p>
     </body>
 
 </html>
