--- a/moduli 11/index.html
+++ b/moduli 11/index.html
@@ -16,7 +16,8 @@
     <p>test</p>
     <p>shkolla digjitale
     <h1>DS</h1>
-    </p>
+    <div>Lorem Inventore sapiente, perspiciatis repellendus corporis, sed, excepturi at quae repudiandae tempora blanditiis possimus. Blanditiis,
+         molestiae! Soluta aliquam nostrum repellat, molestias dolor ratione?</div>
 </body>
 
 
